# imgdds

./: README.md  nil:  pyproject.toml
imgdds/: imgdds.py
